Z-index Fix
.elementor-widget-wrap {
  position: relative;
  width: 100%;
  z-index: 0; }

--- a/assets/css/frontend.css
+++ b/assets/css/frontend.css
@@ -199,7 +199,7 @@
 .elementor-widget-wrap {
   position: relative;
   width: 100%;
-  z-index: 1; }
+  z-index: 0; }
 
 .elementor-widget {
   position: relative; }
